--- a/Лаб1_Федькина_1курс_ПОО.md
+++ b/Лаб1_Федькина_1курс_ПОО.md
@@ -295,40 +295,158 @@ int main(void)
  Создать функцию, которая принимает массив целых чисел и его размер, а затем возвращает указатель на максималь
 ный элемент массива
 ### Список идентификаторов
-| Имя переменной | Тип данных | Описание |
-|----------------|------------|----------|
-| ***pointer     | double     |Указатель|
-|pointer         |double ***  |Указатель|
-|*pointer        |double **   |Указатель|
-|**pointer       |double *    |Указатель|
+| Имя переменной | Тип данных | Описание    |
+|----------------|------------|-------------|
+| n              | int        |Длина массива|
+|arr             |int         |Массив       |
+|*mx             |int         |Указатель    |
+|*elem           |int         |Указатель    |
 ### Код программы
 ```C
-```
-### Результат
-## Задача 1- упражнения с malloc и сложными однострочными выражениями в C с присваиваниями внутри.
-### Постановка задачи:
-### Список идентификаторов
-| Имя переменной | Тип данных | Описание |
-|----------------|------------|----------|
-| ***pointer     | double     |Указатель|
-|pointer         |double ***  |Указатель|
-|*pointer        |double **   |Указатель|
-|**pointer       |double *    |Указатель|
-### Код программы
-```C
-```
-### Результат
-## Задача 1- упражнения с malloc и сложными однострочными выражениями в C с присваиваниями внутри.
-### Постановка задачи:
-### Список идентификаторов
-| Имя переменной | Тип данных | Описание |
-|----------------|------------|----------|
-| ***pointer     | double     |Указатель|
-|pointer         |double ***  |Указатель|
-|*pointer        |double **   |Указатель|
-|**pointer       |double *    |Указатель|
-### Код программы
-```C
-```
-### Результат
+#include <stdio.h>
 
+int *rabota_ms(int *arr,int n)
+{
+    if (arr==NULL||n==0)
+    {
+        printf("ERROR!\n");
+        return NULL;
+    }
+
+    int *elem=arr;
+    for (int i=1;i<n;++i)
+    {
+        if (arr[i]>*elem)
+        {
+            elem=&arr[i];
+        }
+    }
+    return elem;
+}
+int main (void)
+{
+    int n=5;
+    int arr[5]={0,1,2,3,4};
+    int *mx=rabota_ms(arr,n);
+
+    if (mx!=NULL)
+    {
+        printf("Максимальный элемент массива равен %d. ",*mx);
+    }
+    else
+    {
+        printf ("ERROR!\n");
+    }
+    return 0;
+}
+```
+### Результат
+<img width="407" height="160" alt="Л5" src="https://github.com/user-attachments/assets/a3095736-17d3-4e20-a8d0-eaf290465deb" />
+
+##  Задача 6- реверс массива через указатели
+### Постановка задачи:
+ Реализовать функцию, которая переворачивает массив целых чисел, используя указатели для перемещения по эле
+ментам.
+### Список идентификаторов
+| Имя переменной | Тип данных |         Описание    |
+|----------------|------------|---------------------|
+| n              | int        |Длина массива        |
+|arr             |int         |Массив               |
+|* x             |int         |Указатель            |
+|*y              |int         |Указатель            |
+|elem            |int         |Временно хранит числа|
+### Код программы
+```C
+#include <stdio.h>
+void reverse(int *arr,int n)
+{
+    if (arr==NULL || n<=1)
+    {
+        return;
+    }
+    int *x=arr;//указатель на начало
+    int *y=arr+n-1;// указатель на конец
+
+    while (x<y)
+    {
+        int elem=*x;
+        *x=*y;
+        *y=elem;
+        x++;
+        y--;
+    }
+}
+
+int main(void)
+{
+    int n=5;
+    int arr[5]={0,1,2,3,4};
+    printf("Массив: \n");
+    for (int i=0;i<n;++i)
+    {
+        printf("%d ",arr[i]);
+    }
+    printf("\n");
+
+    reverse(arr,n);
+    printf("Новый массив: \n");
+    for (int i=0;i<n;++i)
+    {
+        printf("%d ",arr[i]);
+    }
+    printf("\n");
+    return 0;
+
+}
+```
+### Результат
+<img width="347" height="223" alt="Л6" src="https://github.com/user-attachments/assets/5efa5d37-0030-4dd2-938e-4ffb586fb5e1" />
+
+##  Задача 9- подсчет числа пробелов в строке
+### Постановка задачи:
+ Написать функцию, которая подсчитывает количество пробелов в строке, используя указатели для перемещения по
+ символам строки.
+### Список идентификаторов
+| Имя переменной | Тип данных |      Описание        |
+|----------------|------------|----------------------|
+| *st            | char       |  Указатель           |
+|s               |char        |      Строка          |
+|count           |int         |Кол-во пробелов       |
+|k               |int         |Счётчик в ф-ции       |
+|elem            |cha         |Временно хранит символ|
+### Код программы
+```C
+#include <stdio.h>
+#include <string.h>
+int probel(char *s)
+{
+    char *st=s;
+    int k=0;
+    if (st==NULL)
+    {
+        return 0;
+    }
+    while (*st!='\0')
+    {
+        char elem=*st;
+        if (elem==' ')
+        {
+            k=k+1;
+        }
+        st++;
+    }
+    return k;
+}
+int main(void)
+{
+    char s[100];
+    fgets(s,100,stdin);
+    int count=probel(s);
+    printf ("Количество пробелов строке: %d \n",count);
+    return 0;
+}
+```
+### Результат
+<img width="528" height="238" alt="Л9" src="https://github.com/user-attachments/assets/32c77be5-782a-4cd1-be50-47413f1f759e" />
+
+## Информация об обучающемся: Федькина Полина Дмитриевна 1 курс ПОО.
