--- a/Лаб1_Федькина_1курс_ПОО.md
+++ b/Лаб1_Федькина_1курс_ПОО.md
@@ -59,6 +59,7 @@ int main(void) {
  Напишитепрограмму, которая создает одномерный динамический массив из чисел с плавающей точкой двойной точ
 ности, заполняет его значениями с клавиатуры и выводит все элементы массива, используя арифметику указателей
  (оператор +), а не оператор доступа к элементам массива []
+
 ### Список идентификаторов
 | Имя переменной | Тип данных |           Описание       |
 |----------------|------------|--------------------------|
@@ -260,6 +261,8 @@ int main(void)
 |*pa             |int         |Указатель             |
 |*pb             |int         |Указатель             |
 Остальные переменные - локальные (указанные в функциях)
+### Математическая модель
+ $`\sqrt{3x-1}+(1+x)^2`$
 ### Код программы
 ```C
 #include <stdio.h>
