--- a/Лаб1_Федькина_1курс_ПОО.md
+++ b/Лаб1_Федькина_1курс_ПОО.md
@@ -262,7 +262,7 @@ int main(void)
 |*pb             |int         |Указатель             |
 Остальные переменные - локальные (указанные в функциях)
 ### Математическая модель
- $`\sqrt{3x-1}+(1+x)^2`$
+$$\ c=a+b $$
 ### Код программы
 ```C
 #include <stdio.h>
@@ -404,6 +404,92 @@ int main(void)
 ```
 ### Результат
 <img width="347" height="223" alt="Л6" src="https://github.com/user-attachments/assets/5efa5d37-0030-4dd2-938e-4ffb586fb5e1" />
+
+##  Задача 7- поиск подстроки в строке через указатели
+### Постановка задачи:
+Реализовать функцию, которая находит первое вхождение одной строки в другую, используя указатели вместо индек
+сов для доступа к символам строки
+
+### Список идентификаторов
+| Имя переменной | Тип данных |                       Описание                                  |
+|----------------|------------|-----------------------------------------------------------------|
+| *s             | char       |                Указатель на исходную строку                     |
+|*pdstr          |char        |Указатель на ту строку, первое вхождение которой необходимо найти|
+|*res            |char        |            Указатель на первое вхождение                        |
+|                            Переменные в функции poisk()                                       |
+| *s             | char       |               Указатель на исходную строку                      |
+|*s0             |char        |Указатель на ту строку, первое вхождение которой необходимо найти|
+| *p             | char       |        Указатель на исходную строку для изменения адреса        |
+| *isx           | char       |                     Указатель на исходную строку                |
+|*neob           |char        |Указатель на ту строку, первое вхождение которой необходимо найти|
+## Код программы
+```C
+#include <stdio.h>
+#include <stdlib.h>
+const char *poisk(const char *s, const char *s0)//возвращает указатель на 1-ое вхождение в строку.
+{
+    if (!*s0)
+    {
+        return s;
+    }
+
+    for (const char *p=s;*p;++p)
+    {
+        const char *isx=p;
+        const char *neob=s0;
+
+        while (*isx && *neob && (*isx==*neob))
+        {
+            ++isx;
+            ++neob;
+        }
+        if (!*neob)
+        {
+            return p;
+        }
+        
+    }
+    return NULL;
+
+}
+
+int main(void)
+{
+    const char *s="Найти подстроку в строке.";
+    const char *pdstr="подстроку";
+
+    const char *res = poisk(s,pdstr);
+    if (res)
+    {
+        printf("Найдено: \"%s\"\n",res);
+    }
+    else
+    {
+        printf("Не найдено!!!");
+    }
+
+    return 0;
+
+}
+```
+### Результат
+<img width="390" height="196" alt="Л7" src="https://github.com/user-attachments/assets/91e2c4a1-7491-4efc-96e5-bca49c5d3293" />
+
+## Задача 8- копирование строки через указатели
+### Постановка задачи:
+ Написатьфункцию,котораякопируетоднустрокувдругую,используяуказателивместовстроеннойфункции strcpy.
+
+### Список идентификаторов
+| Имя переменной | Тип данных |                       Описание                                  |
+|----------------|------------|-----------------------------------------------------------------|
+| *s0            | char       |                Указатель на исходную строку                     |
+|len             |size_t      |                   Длина строки с /0                             |
+|*p0             |char        |            Указатель на исходную строчку                        |
+| *s             | char       |               Указатель на пуcтую строку                        |
+|                            Переменные в функции cop()                                         |
+| *s             | char       |                Указатель на пуcтую строку                       |
+|*s0             |char        |                     Указатель на исходную строку                |
+| *adress        | char       |                  Указатель на исходную строку                   |
 
 ##  Задача 9- подсчет числа пробелов в строке
 ### Постановка задачи:
