--- a/Лаб1_Федькина_1курс_ПОО.md
+++ b/Лаб1_Федькина_1курс_ПОО.md
@@ -491,6 +491,45 @@ int main(void)
 |*s0             |char        |                     Указатель на исходную строку                |
 | *adress        | char       |                  Указатель на исходную строку                   |
 
+### Код программы
+```C
+#include <stdio.h>
+#include <stdlib.h>
+
+char *cop(char *s, const char *s0)
+{
+    char *adress=s;
+    while ((*adress++=*s0++)!='\0'); // копируем вплоть до нулевого символа включительно
+    return s;
+}
+
+int main (void)
+{
+    const char *s0 = "Точка";
+    size_t len=0;
+    const char*p = s0;
+    while (*p++)++len;
+
+    char *s=malloc(len+1);
+
+    if (!s)
+    {
+        printf("ERROR!");
+        return 1;
+    }
+
+    cop(s,s0);
+
+    printf("Исходная: %s\n",s0);
+    printf("Копия: %s\n",s);
+
+    free(s);
+    return 0;
+}
+```
+### Результат
+<img width="345" height="197" alt="Л8" src="https://github.com/user-attachments/assets/4b7a676b-e517-43ad-97af-2227be736d71" />
+
 ##  Задача 9- подсчет числа пробелов в строке
 ### Постановка задачи:
  Написать функцию, которая подсчитывает количество пробелов в строке, используя указатели для перемещения по
