Update and rename LR3.md to Лаб3_Федькина_1курс_ПОО.md

--- a/Лаб3_Федькина_1курс_ПОО.md
+++ b/Лаб3_Федькина_1курс_ПОО.md
@@ -93,7 +93,7 @@ int main (void)
 ### Математическая модель 
  Отсутствует
 ### Список идентификаторов
-Отсутсвует
+Отсутствует
 ### Код программы
 ```c
 #include <stdio.h>
