--- a/Лаб3_Федькина_1курс_ПОО.md
+++ b/Лаб3_Федькина_1курс_ПОО.md
@@ -123,6 +123,7 @@ int main(void)
 ```
 ### Результаты
 <img width="310" height="217" alt="3" src="https://github.com/user-attachments/assets/3da00d49-dd59-4480-ba67-6aa37499a87e" />
+
 ## Задача 4- размеченное объединение
 ### Постановка задачи:
  Создайте размеченное объединение (union), которое заключено в структуру. Структура должна также содержать пе
@@ -215,13 +216,14 @@ int main(void)
 ```
 ### Результаты
 <img width="327" height="181" alt="4" src="https://github.com/user-attachments/assets/13227b86-e008-439e-ba3c-dd945a94654e" />
+
 ## Задача 5- ввод и хранение данных о студентах
 ### Постановка задача:
  Создайте структуру, в которой используется объединение для хранения различных типов данных: например, структу
 ра с отдельным полем для имени студента и отдельное поле– целое число для его возраста либо строка его возраста
  словами. Реализуйте программу для динамического ввода данных о студентах и вывода их на экран
  ### Математическая модель
- Отсутсвует
+ Отсутствует
  ### Список идентификаторов
 | Имя |Тип|Смысл|
 |-----|---|-----|
@@ -332,7 +334,7 @@ int main(void)
  Используйте перечисление (enum) для управления состояниями некоторой условной системы, например, старт, стоп,
  пауза. Напишите программу, которая изменяет состояние системы и выводит текущее состояние на экран.
  ### Математическая модель
- Отсутсвует
+ Отсутствует
  ### Список идентификаторов
 | Имя |Тип|Смысл|
 |-----|---|-----|
@@ -456,7 +458,7 @@ int main(void)
 через перечисления и объединения. Например, пользователь может выбрать ввод данных как числа или строки, и
 программа корректно сохранит и отобразит эти данные.
 ### Математическая модель
-Отстутсвует
+Отсутствует
 ### Список идентификаторов
 | Имя |Тип|Смысл|
 |-----|---|-----|
