--- a/Лаб5_Федькина_ПОО_1курс.md
+++ b/Лаб5_Федькина_ПОО_1курс.md
@@ -1,1 +1,78 @@
+# Лабораторная работа №5
+## Тема лабораторной работы: Файловый ввод-вывод
+##  Задача 1. Чтение и вывод содержимого текстового файла
+### Постановка задачи:
+Напишите программу, которая открывает текстовый файл (например, “input.txt”) для чтения, считывает его построч
+но с помощью функции fgets() и выводит каждую строку на стандартный вывод. Программа должна проверять,
+ успешно ли открыт файл, и корректно закрывать его после чтения
+ ### Математическая модель
+ Отсутствует
+### Список идентификаторов
+|Имя|Тип|Смысл|
+--------------
+|*fp|FILE|Указатель на переменную типа FILE|
+|buffer|char|Перемнная, обозначающая пустую строку|
+### Код программы 
+```c
+ #include <stdio.h>//подключение препроцессора ввод-вывод
+ #include <stdlib.h>
+    void readAndPrintFile() {//Функция для чтения и вывода файла
+        FILE *fp = fopen("input.txt", "r");//указатель на переменную "типа" FILE кладется содержимое файла
+        if (fp == NULL) {//Проверка: получилось ли прочитать файл
+            perror("Ошибка открытия файла");
+            exit(EXIT_FAILURE);//Безопасный выход из файла
+            }
+        char buffer[256];//Создание пустой строки, где будут храниться данные из файла
+        while (fgets(buffer, sizeof(buffer), fp) != NULL) {//fgets(символьный массив, макс.длина строки, указатель на пер.тпа FILE)
+            printf("%s", buffer);
+        }
+        fclose(fp);//Закрытие файла
+    }
+ int main(void) {
+    readAndPrintFile();
+    return 0;   
+ }
+```
+### Результат
+
+<img width="326" height="93" alt="1" src="https://github.com/user-attachments/assets/76e086c5-0949-4a42-a5bc-710240c9b054" />
+
+##  Задача 2. Запись пользовательского ввода в текстовый файл
+### Постановка задачи:
+ Создайте программу, которая запрашивает у пользователя несколько строк текста, а затем записывает введённые дан
+ные в файл “output.txt”. Используйте режим записи "w". После завершения записи файл закрывается, а программа
+ выводит сообщение об успешном завершении
+ ### Математическая модель
+ Отсутствует
+### Список идентификаторов
+|Имя|Тип|Смысл|
+--------------
+||||
+### Код программы
+```c
+#include <stdio.h>
+#include <stdlib.h>
+void writeUserInputToFile() {//функция для записи данных в файл
+    FILE *fp = fopen("output.txt", "w");//указатель на переменную типа FILE, создание пустого файлика
+    if (fp == NULL) {//если не получилось создать файл (то есть в указетле нет адреса(ссылки) на новый файл, то выводим ошибку)
+        perror("Ошибка создания файла");
+        exit(EXIT_FAILURE);
+    }
+    char line[256];//создаем пустую строку, куда будем писать текст
+    printf("Введите строки текста (для завершения введите пустую строку):\n");
+    while (1) {//Бесконечный цикл (выполняется постоянно до тех пор, пока не будет встречен break) 
+        fgets(line, sizeof(line), stdin);//stdin — это стандартный поток ввода. В него попадают все строки, вводимые пользователем. 
+        // Если введена пустая строка (только символ новой строки), прекращаем ввод
+        if (line[0] == '\n') break;
+        fputs(line, fp);
+    }
+    fclose(fp);
+    printf("Данные успешно записаны в output.txt\n");
+ }
+ int main(void) {
+     writeUserInputToFile();
+    return 0;
+ }
+```
+### Результаты
 
