--- a/rust/Лаб1_Федкьина_1курс_ПОО.md
+++ b/rust/Лаб1_Федкьина_1курс_ПОО.md
@@ -105,6 +105,267 @@ fn main()
 ### Постановка задачи:
 Задайте структуру Car с полями brand, model и year, и создайте несколько экземпляров этой
  структуры. Выведите информацию о каждой машине на экран.
+### Математическая модель
+Отсутствует
+### Список идентификаторов
+|Имя|Тип|Смысл|
+|---|----|----|
+|car1|struct Car|Экземпляр структуры Car|
+|car2|struct Car|Экземпляр структуры Car|
+|car3|struct Car|Экземпляр структуры Car|
 
+### Код программы:
+```
+struct Car{
+    brand: String,
+    model: String,
+    year: u16,
+}
 
+fn main(){
+    let car1=Car{
+        brand:String::from("Toyota"),
+        model:String::from("Corolla"),
+        year:2020,
+    };
+    let car2=Car{
+        brand:String:: from("Ford"),
+        model:String::from("Mustang"),
+        year:1967,
+    };
+    let car3=Car{
+        brand:String::from("Tesla"),
+        model:String::from("Model S"),
+        year: 2023,
+    };
 
+    let cars=vec![car1,car2,car3];
+    for car in cars{
+        println!("Марка:{}; Модель:{}; Год:{}",car.brand,car.model,car.year);
+    };
+}
+```
+### Результаты
+
+<img width="392" height="115" alt="4" src="https://github.com/user-attachments/assets/1dc499b0-d1b5-4b7c-9f3b-f15ca833fafa" />
+
+## Задача №5
+### Постановка задачи:
+ Напишите программу, которая запрашивает у пользователя число 𝑁 и выводит на экран 𝑁ное
+ число Фибоначчи. Используйте рекурсию для решения этой задачи.
+### Математическая модель
+Числа Фибоначчи:
+
+<img width="268" height="85" alt="5 0" src="https://github.com/user-attachments/assets/fd66e0c9-d9de-493a-b0f9-40ea8dbea66a" />
+
+### Список идентификаторов
+|Имя|Тип|Смысл|
+|---|----|----|
+|input|String|Переменная, в котрую кладется строка|
+|n|u32|Cтрока input преобрзованная в число|
+|n ( в fibonacci)|u32|Промежуточная переменная|
+|result|u32|Результат функции fibonacci|
+
+### Код программы
+```
+use std::io;
+
+fn fibonacci(n: u32) -> u32 {
+    if n == 0 {
+        0
+    } else if n == 1 {
+        1
+    } else {
+        fibonacci(n - 1) + fibonacci(n - 2)
+    }
+}
+
+fn main() {
+    println!("Введите число N:");
+
+    let mut input = String::new();
+    io::stdin().read_line(&mut input).expect("Ошибка чтения");
+
+    let n: u32 = match input.trim().parse() {//parse() преобразование строки в число
+        Ok(num) => num,//если парсинг прошел успешно, то присваиваем значение переменной
+        Err(_) => {
+            println!("Пожалуйста, введите корректное число.");
+            return;
+        }
+    };
+
+    let result =fibonacci (n);
+    println!("{}-е число Фибоначчи: {}", n, result);
+}
+```
+### Результаты
+
+<img width="245" height="103" alt="5 1" src="https://github.com/user-attachments/assets/ed40b8db-673c-4c13-b0ba-0bb4c5bfbb60" />
+
+## Задача №6
+### Постановка задачи:
+ Реализуйте перечисление DayOfWeekдляднейнедели.Напишитефункцию,котораяпринимает
+ день недели и возвращает следующий день. Обработайте случаи перехода на следующий день
+ недели, если текущий день– воскресенье.
+### Математическая модель
+Отсутствует
+### Список идентификаторов
+|Имя|Тип|Смысл|
+|---|----|----|
+|today|enum DayOfWeek|Экземпляр перечисления DayOfWeek|
+|tomorrow|enum DayOfWeek|Результат функции next_day|
+
+### Код программы:
+```
+#[derive(Debug, Copy, Clone)]
+enum DayOfWeek {
+    Monday,
+    Tuesday,
+    Wednesday,
+    Thursday,
+    Friday,
+    Saturday,
+    Sunday,
+}
+
+fn next_day(day: DayOfWeek) -> DayOfWeek {
+    use DayOfWeek::*;
+    match day {
+        Monday => Tuesday,
+        Tuesday => Wednesday,
+        Wednesday => Thursday,
+        Thursday => Friday,
+        Friday => Saturday,
+        Saturday => Sunday,
+        Sunday => Monday,
+    }
+}
+
+fn main() {
+    let today = DayOfWeek::Sunday;
+    let tomorrow = next_day(today);
+
+    println!("Сегодня: {:?}, завтра: {:?}", today, tomorrow);
+}
+
+```
+### Результат
+
+<img width="890" height="128" alt="6" src="https://github.com/user-attachments/assets/6bb42b00-5568-4b86-ad87-bfb1a6440615" />
+## Задача №7
+### Постановка задачи:
+Создайте структуру Product с полями name, price и category, а также перечисление (enum)
+ Category для категорий товаров. Напишите метод для вывода информации о продукте и
+ ассоциированную функцию для подсчета общей суммы товаров в заданной категории из
+ массива продуктов.
+### Математическая модель
+Отсутствует
+### Список идентификаторов
+|Имя|Тип|Смысл|
+|---|----|----|
+|products|struct Product|Список (вектор) экземпляров struct Product|
+|total_electronics|f64|Результат функции total_price_by_category|
+### Код программы
+```
+#[derive(Debug,PartialEq)]
+enum Category{
+    Electronics,
+    Clothing,
+    Food,
+    Books,
+}
+struct Product{
+    name:String,
+    price:f64,
+    category:Category,
+}
+impl Product{
+    //Место для вывода информации о продукте
+    fn info(&self){
+        println!("Название: {}, Цена: {:.2}, Категория: {:?}",self.name,self.price,self.category)}
+        // Ассоциированная функция для подсчёта общей суммы товаров в заданной категории
+    fn total_price_by_category(products: &[Product], category: Category) -> f64 {
+        products.iter()//создает итератор по списку продуктов.
+            .filter(|p| p.category == category)//оставляет только те продукты, у которых поле category совпадает с переданной категорией.
+            .map(|p| p.price)//преобразует каждый отфильтрованный продукт в его цену (price).
+            .sum()//суммирует все цены, полученные на предыдущем шаге и возвращает итоговое значение типа f64.
+    }
+}
+fn main() {
+    let products = vec![
+        Product { name: "Телевизор".to_string(), price: 35000.0, category: Category::Electronics },
+        Product { name: "Футболка".to_string(), price: 1200.0, category: Category::Clothing },
+        Product { name: "Хлеб".to_string(), price: 50.5, category: Category::Food },
+        Product { name: "Ноутбук".to_string(), price: 70000.0, category: Category::Electronics },
+        Product { name: "Книга".to_string(), price: 450.0, category: Category::Books },
+        Product { name: "Джинсы".to_string(), price: 3500.0, category: Category::Clothing },
+    ];
+    for product in &products {
+        product.info();
+    }
+
+    let total_electronics = Product::total_price_by_category(&products, Category::Electronics);
+    println!("\nОбщая стоимость товаров категории Electronics: {:.2}", total_electronics);
+}
+```
+### Результат
+
+<img width="873" height="330" alt="7" src="https://github.com/user-attachments/assets/2bf6dbf3-429b-4229-90d8-c485a6489b1d" />
+
+## Задача №8
+### Постановка задачи:
+ Создайте структуру Employee с полями name, position, salary, а также перечисление
+ Position для должностей сотрудников. Напишите функцию, которая принимает вектор
+ сотрудников и возвращает вектор сотрудников заданной должности.
+### Математическая модель
+Отсутствует
+### Список идентификаторов
+|Имя|Тип|Смысл|
+|---|----|----|
+|products|struct Product|Список (вектор) экземпляров struct Product|
+|total_electronics|f64|Результат функции total_price_by_category|
+### Код программы
+```
+#[derive(Clone, Debug, PartialEq)]
+enum Position {
+    Manager,
+    Developer,
+    Designer,
+    Tester,
+    // Можно добавить другие должности
+}
+
+#[derive(Clone, Debug)]
+struct Employee {
+    name: String,
+    position: Position,
+    salary: f64,
+}
+
+fn employees_by_position(employees: &[Employee], position: Position) -> Vec<Employee> {
+    employees.iter()
+        .filter(|e| e.position == position)
+        .cloned()
+        .collect()
+}
+
+fn main() {
+    let employees = vec![
+        Employee { name: "Иван".to_string(), position: Position::Developer, salary: 1000.0 },
+        Employee { name: "Мария".to_string(), position: Position::Manager, salary: 1500.0 },
+        Employee { name: "Пётр".to_string(), position: Position::Developer, salary: 1100.0 },
+    ];
+
+    let developers = employees_by_position(&employees, Position::Developer);
+
+    for dev in developers {
+        println!("{:?}", dev);
+    }
+}
+```
+### Результаты
+
+<img width="785" height="116" alt="8" src="https://github.com/user-attachments/assets/75464764-e098-4178-8c64-d85f509c0613" />
+
+## Информация об обучающемся 
+Федькина Полина Дмитриевна, 1 курс, ПОО.
