--- a/rust/Лаб1_Федкьина_1курс_ПОО.md
+++ b/rust/Лаб1_Федкьина_1курс_ПОО.md
@@ -80,6 +80,7 @@ fn main() {
 |s3|&str|Пример строки|
 
 ### Код программы
+
 ```
 fn string_length(s:&str)->usize
 {
@@ -159,6 +160,7 @@ fn main(){
 <img width="268" height="85" alt="5 0" src="https://github.com/user-attachments/assets/fd66e0c9-d9de-493a-b0f9-40ea8dbea66a" />
 
 ### Список идентификаторов
+
 |Имя|Тип|Смысл|
 |---|----|----|
 |input|String|Переменная, в котрую кладется строка|
@@ -167,6 +169,7 @@ fn main(){
 |result|u32|Результат функции fibonacci|
 
 ### Код программы
+
 ```
 use std::io;
 
@@ -198,6 +201,7 @@ fn main() {
     println!("{}-е число Фибоначчи: {}", n, result);
 }
 ```
+
 ### Результаты
 
 <img width="245" height="103" alt="5 1" src="https://github.com/user-attachments/assets/ed40b8db-673c-4c13-b0ba-0bb4c5bfbb60" />
@@ -210,12 +214,14 @@ fn main() {
 ### Математическая модель
 Отсутствует
 ### Список идентификаторов
+
 |Имя|Тип|Смысл|
 |---|----|----|
 |today|enum DayOfWeek|Экземпляр перечисления DayOfWeek|
 |tomorrow|enum DayOfWeek|Результат функции next_day|
 
 ### Код программы:
+
 ```
 #[derive(Debug, Copy, Clone)]
 enum DayOfWeek {
@@ -249,9 +255,11 @@ fn main() {
 }
 
 ```
+
 ### Результат
 
 <img width="890" height="128" alt="6" src="https://github.com/user-attachments/assets/6bb42b00-5568-4b86-ad87-bfb1a6440615" />
+
 ## Задача №7
 ### Постановка задачи:
 Создайте структуру Product с полями name, price и category, а также перечисление (enum)
@@ -261,10 +269,12 @@ fn main() {
 ### Математическая модель
 Отсутствует
 ### Список идентификаторов
+
 |Имя|Тип|Смысл|
 |---|----|----|
 |products|struct Product|Список (вектор) экземпляров struct Product|
 |total_electronics|f64|Результат функции total_price_by_category|
+
 ### Код программы
 ```
 #[derive(Debug,PartialEq)]
@@ -320,10 +330,12 @@ fn main() {
 ### Математическая модель
 Отсутствует
 ### Список идентификаторов
+
 |Имя|Тип|Смысл|
 |---|----|----|
-|products|struct Product|Список (вектор) экземпляров struct Product|
-|total_electronics|f64|Результат функции total_price_by_category|
+|employees|struct Employee|Список (вектор) экземпляров struct Employee|
+|developers|f64|Результат функции employees_by_position|
+
 ### Код программы
 ```
 #[derive(Clone, Debug, PartialEq)]
