--- a/Лаб4_Федькина_ПОО_1курс.md
+++ b/Лаб4_Федькина_ПОО_1курс.md
@@ -18,7 +18,17 @@
 
 ### Список идентификаторов
 |Имя|Тип|Смысл|
-||||
+|---|---|-----|
+|rows|int|Кол-во строк|
+|cols|int|Кол-во столбцов|
+|matrix1|int|Матрица rows*cols|
+|str|int|Кол-во строк|
+|stl|int|Кол-во столбцов|
+|**matrix2|int|Указатель на указатель матрицы str*stl|
+|res1|int|Транспонированная матрица|
+|matrix3|int|Матрица rows*cols|
+|res2|int|Сумма матриц|
+|res3|int|Произведение матриц|
 
 ### Код программы
 ```c
@@ -213,6 +223,14 @@ int main(void)
 ### Математическая модель
 Отсутствует
 ### Список идентификаторов
+|Имя|Тип|Смысл|
+|---|---|-----|
+|pars|struct Pars|указатель на экземпляр структуры Pars для хранения JSON файлов|
+|json_str|const char|Входная JSON строка|
+|json|const char|Временный указатель на cJSON объект|
+|item|char|Текущий элемент при итерации|
+|i|int|Счетчик циклов|
+|count|int|Количество элементов в JSON|
 
 ### Код программы
 ```c
@@ -221,36 +239,37 @@ int main(void)
 #include <string.h>
 #include "cJSON.h"
 
-typedef struct{
+typedef struct {
     char **keys;
-    cJSON *values;
+    cJSON **values;
     int count;
+    cJSON *root;  // Сохраняем корневой объект для последующего освобождения
 } Pars;
 
-//Функция для парсинга JSON-строки в структуру Pars
+// Функция для парсинга JSON-строки в структуру Pars
 Pars* parse_json_pars(const char *json_str)
 {
-    if (json_str==NULL) return NULL;
+    if (json_str == NULL) return NULL;
 
-    cJSON *json=cJSON_Parse(json_str);
-    if (json==NULL || !cJSON_IsObject(json))
-    {
-        cJSON_Delete(json);
-        return NULL;
-    }
-    Pars *pars=malloc(sizeof(Pars));
-    if (!pars)
-    {
+    cJSON *json = cJSON_Parse(json_str);
+    if (json == NULL || !cJSON_IsObject(json)) {
         cJSON_Delete(json);
         return NULL;
     }
 
-    int count=cJSON_GetArraySize(json);
-    pars->count=count;
-    pars->keys=malloc(sizeof(char*)*count);
-    pars->values=malloc(sizeof(cJSON*)*count);
-    if (!pars->keys || !pars->values)
-    {
+    Pars *pars = malloc(sizeof(Pars));
+    if (!pars) {
+        cJSON_Delete(json);
+        return NULL;
+    }
+
+    int count = cJSON_GetArraySize(json);
+    pars->count = count;
+    pars->keys = malloc(sizeof(char*) * count);
+    pars->values = malloc(sizeof(cJSON*) * count);
+    pars->root = json;  // сохраняем корень
+
+    if (!pars->keys || !pars->values) {
         free(pars->keys);
         free(pars->values);
         free(pars);
@@ -258,58 +277,52 @@ Pars* parse_json_pars(const char *json_str)
         return NULL;
     }
 
-    int i=0;
-    cJSON *item=NULL;
-    cJSON_ArrayForEach (item,json)
-    {
-        pars->keys[i]=strdup(item->string);//Копируем ключ
-        pars->values[i]=item;//Сохраняем указатель на значение cJSON
+    int i = 0;
+    cJSON *item = NULL;
+    cJSON_ArrayForEach(item, json) {
+        pars->keys[i] = strdup(item->string);
+        pars->values[i] = item;
         i++;
     }
-    // Не удаляем json, т.к. values ссылаются на его элементы.
-    // Освобождать нужно после использования Params.
+
     return pars;
 }
 
-//Функция очистки памяти Pars
+// Функция очистки памяти Pars
 void free_pars(Pars *pars)
 {
-    if(!pars) return;
-    for (int i=0;i<pars->count;i++)
+    if (!pars) return;
+
+    for (int i = 0; i < pars->count; i++) {
         free(pars->keys[i]);
-    free (pars->keys);
-    // Значения — это указатели на cJSON элементы,
-    //освободить их нужно через cJSON_Delete верхнего объекта
+    }
+    free(pars->keys);
+    free(pars->values);
+
+    // Освобождаем весь JSON
+    if (pars->root) {
+        cJSON_Delete(pars->root);
+    }
+
+    free(pars);
 }
 
 int main(void)
 {
-    const char *json_str="{\"key1\": \"value1\",\"key2\":42}";
-    Pars *pars=parse_json_pars(json_str);
-    if(!pars)
-    {
+    const char *json_str = "{\"key1\": \"value1\",\"key2\":42}";
+    Pars *pars = parse_json_pars(json_str);
+    if (!pars) {
         printf("Ошибка парсинга JSON\n");
         return 1;
     }
 
-    for (int i=0; i<pars->count;i++)
-    {
-        printf("Ключ %s, Значение: %s\n",pars->keys[i],cJSON_Print(pars->values[i]));
+    for (int i = 0; i < pars->count; i++) {
+        printf("Ключ %s, Значение: %s\n", pars->keys[i], cJSON_Print(pars->values[i]));
     }
 
-    //Освобождение ресурсов
-    if (pars->count>0)
-    {
-        // cJSON_Delete нужно вызвать для корня, чтобы освободить все значения
-        cJSON *root=pars->values[0]->parent;
-        while (root->parent)
-            root =root->parent;//Подняться до корня элеменета
-        cJSON_Delete(root);
-    }
     free_pars(pars);
 
     return 0;
-
 }
 ```
 ### Результаты
@@ -318,6 +331,7 @@ int main(void)
 
 <img width="1122" height="142" alt="2" src="https://github.com/user-attachments/assets/ab361958-fe1a-439d-aafe-3d8fcce2a652" />
 
+
 ##  Задача 3: Решение систем линейных уравнений
 ### Постановка задачи:
  • Реализовать функцию для решения систем линейных уравнений методом Гаусса.
@@ -325,6 +339,15 @@ int main(void)
  • Возвращать массив решений.
  • Поддержка работы с VLAи динамическими массивами
 ### Математическая модель
+|Имя|Тип|Смысл|
+|---|---|-----|
+|pars|struct Pars|указатель на экземпляр структуры Pars для хранения JSON файлов|
+|json_str|const char|Входная JSON строка|
+|json|const char|Временный указатель на cJSON объект|
+|item|char|Текущий элемент при итерации|
+|i|int|Счетчик циклов|
+|count|int|Количество элементов в JSON|
+
 ### Код программы
 ```c
 #include <stdio.h>
