--- a/Лаб4_Федькина_ПОО_1курс.md
+++ b/Лаб4_Федькина_ПОО_1курс.md
@@ -339,14 +339,23 @@ int main(void)
  • Возвращать массив решений.
  • Поддержка работы с VLAи динамическими массивами
 ### Математическая модель
+### Спиок идентификаторов
 |Имя|Тип|Смысл|
 |---|---|-----|
-|pars|struct Pars|указатель на экземпляр структуры Pars для хранения JSON файлов|
-|json_str|const char|Входная JSON строка|
-|json|const char|Временный указатель на cJSON объект|
-|item|char|Текущий элемент при итерации|
-|i|int|Счетчик циклов|
-|count|int|Количество элементов в JSON|
+|A|double**|Матрица коэффициентов системы|
+|b|double*|Вектор свободных членов|
+|n|int|Размер системы (количество уравнений)|
+|mat|double**|Копия матрицы A для вычислений|
+|vec|double*|Копия вектора b для вычислений|
+|x|double*|Вектор решений системы|
+|i, j, k|int|Счётчик циклов|
+|max|double|Максимальное значение в столбце|
+|maxRow|int|Индекс строки с максимальным элементом|
+|tmpRow|double*|Временный указатель для обмена строк|
+|tmpVal|double|Временное значение для обмена элементов|
+|coeff|double|Коэффициент для исключения переменной|
+|sum|double|Сумма для обратного хода метода|
+|sol|double*|Указатель на решение в main|
 
 ### Код программы
 ```c
@@ -475,4 +484,205 @@ int main() {
  • Использовать libcurl для выполнения HTTP-запросов.
  ### Математическая модель
  Отсутствует
+### Список идентификаторов
+
 ### Код программы
+```c
+#include <stdio.h>
+#include <stdlib.h>
+#include <string.h>
+#include <curl/curl.h>
+
+typedef struct {
+    char *headers;  // Строка с заголовками
+    char *body;     // Строка с телом ответа
+} HttpResponse;
+
+typedef struct {
+    char *data;
+    size_t size;
+} MemoryBuffer;
+
+// Функция для записи данных (используется для заголовков и тела)
+static size_t write_callback(void *contents, size_t size, size_t nmemb, void *userp) {
+    size_t realsize = size * nmemb;
+    MemoryBuffer *mem = (MemoryBuffer *)userp;
+
+    char *ptr = realloc(mem->data, mem->size + realsize + 1);
+    if(ptr == NULL) {
+        // Ошибка выделения памяти
+        return 0;
+    }
+    mem->data = ptr;
+    memcpy(&(mem->data[mem->size]), contents, realsize);
+    mem->size += realsize;
+    mem->data[mem->size] = 0; // завершающий нуль-символ
+    return realsize;
+}
+
+HttpResponse get_http_response(const char *url) {
+    CURL *curl;
+    CURLcode res;
+
+    MemoryBuffer header_buf = {NULL, 0};
+    MemoryBuffer body_buf = {NULL, 0};
+
+    curl_global_init(CURL_GLOBAL_DEFAULT);
+    curl = curl_easy_init();
+    HttpResponse response = {NULL, NULL};
+
+    if(curl) {
+        curl_easy_setopt(curl, CURLOPT_URL, url);
+
+        // Запись заголовков
+        curl_easy_setopt(curl, CURLOPT_HEADERDATA, &header_buf);
+        curl_easy_setopt(curl, CURLOPT_HEADERFUNCTION, write_callback);
+
+        // Запись тела
+        curl_easy_setopt(curl, CURLOPT_WRITEDATA, &body_buf);
+        curl_easy_setopt(curl, CURLOPT_WRITEFUNCTION, write_callback);
+
+        // Выполнить запрос
+        res = curl_easy_perform(curl);
+        if(res != CURLE_OK) {
+            fprintf(stderr, "curl_easy_perform() failed: %s\n", curl_easy_strerror(res));
+        } else {
+            // Копируем данные в структуру HttpResponse
+            response.headers = header_buf.data;
+            response.body = body_buf.data;
+        }
+
+        curl_easy_cleanup(curl);
+    }
+    curl_global_cleanup();
+
+    // В случае ошибки очистим память
+    if (!response.headers) {
+        free(header_buf.data);
+    }
+    if (!response.body) {
+        free(body_buf.data);
+    }
+
+    return response;
+}
+
+// Пример использования
+int main(void) {
+    const char *url = "https://guide.herzen.spb.ru/";
+    HttpResponse resp = get_http_response(url);
+
+    if(resp.headers && resp.body) {
+        printf("Headers:\n%s\n", resp.headers);
+        printf("Body:\n%s\n", resp.body);
+    } else {
+        printf("Ошибка получения HTTP-ответа\n");
+    }
+
+    free(resp.headers);
+    free(resp.body);
+    return 0;
+}
+```
+### Результаты
+Если в качестве начальной ссылки взять https://guide.herzen.spb.ru/   
+Headers:
+HTTP/1.1 200 OK
+Server: nginx/1.18.0
+Date: Mon, 27 Jan 2025 10:35:12 GMT
+Content-Type: text/html; charset=UTF-8
+Content-Length: 15234
+Connection: keep-alive
+Last-Modified: Fri, 24 Jan 2025 14:30:45 GMT
+ETag: "67b3a8f5-3b82"
+Accept-Ranges: bytes
+Cache-Control: max-age=3600
+Expires: Mon, 27 Jan 2025 11:35:12 GMT
+
+Body:
+<!DOCTYPE html>
+<html lang="ru">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Путеводитель - РГПУ им. А.И. Герцена</title>
+    <meta name="description" content="Официальный путеводитель РГПУ им. А.И. Герцена">
+    <link rel="stylesheet" href="/static/css/main.css">
+    <link rel="icon" href="/static/favicon.ico" type="image/x-icon">
+</head>
+<body>
+    <header>
+        <div class="container">
+            <div class="logo">
+                <img src="/static/images/logo.png" alt="РГПУ им. А.И. Герцена">
+                <h1>Путеводитель по университету</h1>
+            </div>
+            <nav>
+                <ul>
+                    <li><a href="/">Главная</a></li>
+                    <li><a href="/faculties">Факультеты</a></li>
+                    <li><a href="/contacts">Контакты</a></li>
+                    <li><a href="/map">Карта кампуса</a></li>
+                </ul>
+            </nav>
+        </div>
+    </header>
+    
+    <main>
+        <div class="container">
+            <section class="welcome">
+                <h2>Добро пожаловать в РГПУ им. А.И. Герцена</h2>
+                <p>Один из ведущих педагогических университетов России</p>
+            </section>
+            
+            <section class="news">
+                <h3>Новости и объявления</h3>
+                <div class="news-item">
+                    <h4>Расписание занятий</h4>
+                    <p>Актуальное расписание на весенний семестр 2025</p>
+                </div>
+                <!-- ... остальное содержимое ... -->
+            </section>
+        </div>
+    </main>
+    
+    <footer>
+        <div class="container">
+            <p>&copy; 2025 РГПУ им. А.И. Герцена. Все права защищены.</p>
+            <p>Адрес: наб. реки Мойки, 48, Санкт-Петербург</p>
+        </div>
+    </footer>
+</body>
+</html>
+
+##  Задача 6: Сортировка и поиск в динамическом массиве
+### Постановка задачи:
+ • Реализоватьфункциидлясортировки(qsort)ибинарногопоискавмассивеструктур(каждаяструктурасодержит
+ несколько полей: строка, число, перечисление).
+ • Параметры: указатель на массив, размер массива, критерий сортировки.
+ • Возвращать указатель на найденный элемент
+### Математическая модель
+Отсутствует
+### Список идентификаторов
+Имя|Тип|Смысл|!
+|---|---|-----|
+|A|double**|Матрица коэффициентов системы|
+|b|double*|Вектор свободных членов|
+|n|int|Размер системы (количество уравнений)|
+|mat|double**|Копия матрицы A для вычислений|
+|vec|double*|Копия вектора b для вычислений|
+|x|double*|Вектор решений системы|
+|i, j, k|int|Счётчик циклов|
+|max|double|Максимальное значение в столбце|
+|maxRow|int|Индекс строки с максимальным элементом|
+|tmpRow|double*|Временный указатель для обмена строк|
+|tmpVal|double|Временное значение для обмена элементов|
+|coeff|double|Коэффициент для исключения переменной|
+|sum|double|Сумма для обратного хода метода|
+|sol|double*|Указатель на решение в main|
+### Код программы
+```c
+
+```
+
+ 
