--- a/Лаб4_Федькина_ПОО_1курс.md
+++ b/Лаб4_Федькина_ПОО_1курс.md
@@ -339,6 +339,14 @@ int main(void)
  • Возвращать массив решений.
  • Поддержка работы с VLAи динамическими массивами
 ### Математическая модель
+Метод Гаусса при работе с матрицами:
+1.	Написать расширенную матрицу
+2.	Привести ее к ступенчатому виду
+3.	Рассмотреть ранг матрицы исходной и расширенной: если ==, то система совместа, иначе несовместа (не решить)
+4.	Сравнить ранг матрицы и кол-во неизвестных: если ==, то система определена и имеет единственное решение, если r<n, то система неопределенна и решаем дальше, иначе нет решения.
+5.	Если система определена, то составляем систему из ступенчатой матрицы и решаем ее.
+6.	Если система неопределена, то находим главные и свободные переменные при помощи ненулевых (базисных) миноров и выражаем главные через свободные.
+
 ### Спиок идентификаторов
 |Имя|Тип|Смысл|
 |---|---|-----|
@@ -485,7 +493,21 @@ int main() {
  ### Математическая модель
  Отсутствует
 ### Список идентификаторов
-
+|Имя|Тип|Смысл|
+|---|---|-----|
+|contents|void*|указатель на получаемые данные|
+|size|size_t|размер элемента данных|
+|nmemb|size_t|количество элементов данных|
+|userp|void*|указатель на пользовательские данные (буфер)|
+|url|const char*|URL-адрес для HTTP-запроса|
+|curl|CURL*|указатель на контекст libcurl|
+|res|CURLcode|код результата операции libcurl|
+|header_buf|MemoryBuffer|буфер для накопления заголовков|
+|body_buf|MemoryBuffer|буфер для накопления тела ответа|
+|response|HttpResponse|структура для возвращаемого результата|
+|ptr|char*|временный указатель для перераспределения памяти|
+|realsize|size_t|фактический размер полученных данных|
+|mem|MemoryBuffer*|указатель на буфер памяти|
 ### Код программы
 ```c
 #include <stdio.h>
@@ -666,23 +688,136 @@ Body:
 ### Список идентификаторов
 Имя|Тип|Смысл|!
 |---|---|-----|
-|A|double**|Матрица коэффициентов системы|
-|b|double*|Вектор свободных членов|
-|n|int|Размер системы (количество уравнений)|
-|mat|double**|Копия матрицы A для вычислений|
-|vec|double*|Копия вектора b для вычислений|
-|x|double*|Вектор решений системы|
-|i, j, k|int|Счётчик циклов|
-|max|double|Максимальное значение в столбце|
-|maxRow|int|Индекс строки с максимальным элементом|
-|tmpRow|double*|Временный указатель для обмена строк|
-|tmpVal|double|Временное значение для обмена элементов|
-|coeff|double|Коэффициент для исключения переменной|
-|sum|double|Сумма для обратного хода метода|
-|sol|double*|Указатель на решение в main|
+|a|const void*|указатель на первый элемент для сравнения|
+|b|const void*|указатель на второй элемент для сравнения|
+
+|criterion|void*|указатель на критерий сортировки|
+|item1|const Item*|приведённый указатель на первый элемент|
+|item2|const Item*|приведённый указатель на второй элемент|
+|crit|SortCriterion|критерий сортировки|
+|array|Item*|указатель на массив элементов|
+|size|size_t|размер массива|
+|key|const Item*|указатель на искомый элемент|
+|current_criterion|static SortCriterion|статическая переменная для критерия|
+
+|arr| Item[]|массив элементов в main|
+
+|size|size_t|размер массива в main|
+|key|Item|искомый элемент в main|
+|found|Item*|указатель на найденный элемент|
+|i|size_t|счётчик цикла|
+
 ### Код программы
 ```c
+#include <stdio.h>
+#include <stdlib.h>
+#include <string.h>
+
+// Определяем перечисление
+typedef enum {
+    ENUM_A,
+    ENUM_B,
+    ENUM_C
+} MyEnum;
+
+// Структура с несколькими полями
+typedef struct {
+    char str[50];
+    int number;
+    MyEnum en;
+} Item;
+
+// Критерии сортировки
+typedef enum {
+    SORT_BY_STRING,
+    SORT_BY_NUMBER,
+    SORT_BY_ENUM
+} SortCriterion;
+
+// Функция сравнения для qsort (использует выбранный критерий)
+int compare_items(const void *a, const void *b, void *criterion) {
+    const Item *item1 = (const Item *)a;
+    const Item *item2 = (const Item *)b;
+    SortCriterion crit = *(SortCriterion *)criterion;
+
+    switch (crit) {
+        case SORT_BY_STRING:
+            return strcmp(item1->str, item2->str);
+        case SORT_BY_NUMBER:
+            return (item1->number - item2->number);
+        case SORT_BY_ENUM:
+            return (item1->en - item2->en);
+        default:
+            return 0;
+    }
+}
+
+// Обёртка для qsort с возможностью передачи критерия через параметр
+void sort_items(Item *array, size_t size, SortCriterion crit) {
+    // qsort_r или qsort_s отсутствуют в стандарте C, поэтому реализуем с помощью глобальной переменной или обёртки
+    // Здесь используем qsort и передаём crit через глобальный указатель
+    // Для кроссплатформенности сделаем локальную static переменную
+
+    static SortCriterion current_criterion;
+
+    current_criterion = crit;
+
+    int cmp_wrapper(const void *a, const void *b) {
+        return compare_items(a, b, &current_criterion);
+    }
+
+    qsort(array, size, sizeof(Item), cmp_wrapper);
+}
+
+// Функция бинарного поиска
+Item* binary_search(Item *array, size_t size, const Item *key, SortCriterion crit) {
+    static SortCriterion current_criterion;
+
+    current_criterion = crit;
+
+    int cmp_wrapper(const void *a, const void *b) {
+        return compare_items(a, b, &current_criterion);
+    }
+
+    return (Item *)bsearch(key, array, size, sizeof(Item), cmp_wrapper);
+}
+
+int main() {
+    Item arr[] = {
+        {"apple", 10, ENUM_B},
+        {"orange", 5, ENUM_A},
+        {"banana", 7, ENUM_C},
+        {"grape", 3, ENUM_B},
+        {"lemon", 8, ENUM_A}
+    };
+    size_t size = sizeof(arr)/sizeof(arr[0]);
+
+    // Сортируем по числу
+    sort_items(arr, size, SORT_BY_NUMBER);
+
+    printf("Отсортированный массив по числу:\n");
+    for (size_t i = 0; i < size; i++) {
+        printf("%s, %d, %d\n", arr[i].str, arr[i].number, arr[i].en);
+    }
+
+    // Ищем элемент с number = 7 (поиск по числу)
+    Item key = {"", 7, 0}; // str и en не важны при поиске по числу
+
+    Item *found = binary_search(arr, size, &key, SORT_BY_NUMBER);
+    if (found) {
+        printf("\nНайденный элемент: %s, %d, %d\n", found->str, found->number, found->en);
+    } else {
+        printf("\nЭлемент не найден\n");
+    }
+
+    return 0;
+}
 
 ```
-
+### Результат
  
+<img width="320" height="152" alt="6" src="https://github.com/user-attachments/assets/27fc33f3-68f8-4653-a62d-9365d647bca9" />
+
+##  Задача 7: Кэширование вычислений
+### Постановка задачи
+
