--- a/Лаб4_Федькина_ПОО_1курс.md
+++ b/Лаб4_Федькина_ПОО_1курс.md
@@ -686,7 +686,7 @@ Body:
 ### Математическая модель
 Отсутствует
 ### Список идентификаторов
-Имя|Тип|Смысл|!
+Имя|Тип|Смысл|
 |---|---|-----|
 |a|const void*|указатель на первый элемент для сравнения|
 |b|const void*|указатель на второй элемент для сравнения|
