--- a/rust/Лаб2_Федькина_1курс_ПОО.md
+++ b/rust/Лаб2_Федькина_1курс_ПОО.md
@@ -77,11 +77,8 @@ fn main() {
 ### Список идентификаторов
 |Имя|Тип|Смысл|
 |---|---|-----|
-|pair|struct Pair|переменная, экземпляр структуры Pair с целочисленными значениями|
-|a|неизменяемый|переменная, неизменяемая ссылка на первое значение|
-|b|неизменяемый|переменная, неизменяемая ссылка на второе значение|
-|a_mut|изменяемые|переменная, изменяемая ссылка на первое значение|
-|b_mut|изменяемые|переменная, изменяемая ссылка на второе значение|
+|person|struct Person|переменная, экземпляр структуры Person|
+
 ### Код программы
 ```c
 // Определяем трейт PrintInfo с методом print_info
@@ -114,13 +111,165 @@ fn main() {
 ```
 ### Результат
 
-## Задача №1
+<img width="400" height="81" alt="2" src="https://github.com/user-attachments/assets/6fc7544d-6c94-4832-9561-367baad5914b" />
+
+
+## Задача №3
 ### Постановка задачи
- Создайте структуру Pair<T>, которая хранит два значения одного типа T. Реализуйте ме
- тоды для получения и изменения значений пары. Убедитесь, что использование ссылок и
- копирование данных работает корректно.
+Разработайте программу для обработки списка задач (Todo List). Создайте структуру Task с
+полями id, title и completed, а также методы для добавления, удаления и изменения статуса
+задачи. Реализуйте вывод информации о всех задачах.
 ### Математическая модель
 Отсутствует
 ### Список идентификаторов
+|Имя|Тип|Смысл|
+|---|---|-----|
+|todo_list|struct TodoList|переменная, экземпляр структуры TodoList|
+
 ### Код программы
+```c
+#[derive(Debug)]
+struct Task {
+    id: usize,
+    title: String,
+    completed: bool,
+}
+
+impl Task {
+    fn new(id: usize, title: String) -> Self {
+        Task {
+            id,
+            title,
+            completed: false,
+        }
+    }
+
+    fn toggle_completed(&mut self) {
+        self.completed = !self.completed;
+    }
+}
+
+struct TodoList {
+    tasks: Vec<Task>,
+    next_id: usize,
+}
+
+impl TodoList {
+    fn new() -> Self {
+        TodoList {
+            tasks: Vec::new(),
+            next_id: 1,
+        }
+    }
+
+    //Добавить задачу
+    fn add_task(&mut self, title: String) {
+        let task = Task::new(self.next_id, title);
+        self.tasks.push(task);
+        self.next_id += 1;
+    }
+//Удалить задачу по id
+    fn remove_task(&mut self, id: usize) -> bool {
+        if let Some(pos) = self.tasks.iter().position(|x| x.id == id) {
+            self.tasks.remove(pos);
+            true
+        } else {
+            false
+        }
+    }
+//Изменить статус
+    fn toggle_task_status(&mut self, id: usize) -> bool {
+        if let Some(task) = self.tasks.iter_mut().find(|x| x.id == id) {
+            task.toggle_completed();
+            true
+        } else {
+            false
+        }
+    }
+//Вывести все задачи
+    fn print_tasks(&self) {
+        for task in &self.tasks {
+            println!(
+                "[{}] {} - {}",
+                if task.completed { "x" } else { " " },
+                task.id,
+                task.title
+            );
+        }
+    }
+}
+
+fn main() {
+    let mut todo_list = TodoList::new();
+
+    todo_list.add_task("Сделать домашнее задание".into());
+    todo_list.add_task("Прочитать книгу".into());
+    todo_list.print_tasks();
+
+    println!("\n--- После изменения статуса задачи с id = 1 ---");
+    todo_list.toggle_task_status(1);
+    todo_list.print_tasks();
+
+    println!("\n--- После удаления задачи с id = 2 ---");
+    todo_list.remove_task(2);
+    todo_list.print_tasks();
+}
+```
 ### Результат
+
+<img width="631" height="283" alt="3" src="https://github.com/user-attachments/assets/db78b157-98b2-4c87-bc55-4a47e5d97ff3" />
+
+## Задача №4
+### Постановка задачи:
+Напишите функцию find_unique_elements, которая принимает вектор элементов типа T и
+ возвращает вектор уникальных элементов. Определите трейт Unique c методом is_unique,
+ который проверяет, является ли элемент уникальным.
+### Математическая модель
+Отсутсвует
+### Список идентификаторов
+|Имя|Тип|Смысл|
+|---|---|-----|
+|v|vec|Вектор значений|
+|unique|-|Вектор уникальных значений|
+### Код программы
+```c
+use std::collections::HashMap;
+use std::hash::Hash;
+
+// Трейт, который проверяет, является ли элемент уникальным
+pub trait Unique {
+    fn is_unique(&self, all: &[Self]) -> bool where Self: Sized;
+}
+
+// Имплементация трейта Unique для всех типов, которые поддерживают Eq + Hash + Clone
+impl<T> Unique for T
+where
+    T: Eq + Hash + Clone,
+{
+    fn is_unique(&self, all: &[Self]) -> bool {
+        all.iter().filter(|&x| x == self).count() == 1
+    }
+}
+
+// Функция, которая возвращает вектор уникальных элементов
+pub fn find_unique_elements<T>(vec: Vec<T>) -> Vec<T>
+where
+    T: Unique + Clone,
+{
+    vec.iter()
+        .filter(|&item| item.is_unique(&vec))
+        .cloned()
+        .collect()
+}
+
+// Пример использования
+fn main() {
+    let v = vec![1, 2, 2, 3, 4, 4, 5];
+    let unique = find_unique_elements(v);
+    println!("{:?}", unique); // Выведет [1, 3, 5]
+}
+```
+### Результат
+
+<img width="451" height="97" alt="4" src="https://github.com/user-attachments/assets/c42a0e70-7ef2-4a87-a461-a34791b8758d" />
+
